--- a/educationaim/package.json
+++ b/educationaim/package.json
@@ -11,24 +11,18 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@supabase/supabase-js": "^2.57.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-mdx-remote": "^5.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "rehype-sanitize": "^6.0.0",
-    "rehype-stringify": "^10.0.1",
-    "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "unified": "^11.0.5"
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
