--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"   
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
@@ -23,6 +24,7 @@
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-mdx-remote": "^5.0.0",
+    "next-sitemap": "^4.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
